<resources>
    <string name="app_name">Passkeyper</string>

    <string name="nav_bar_sign_in">Manage sign in</string>
    <string name="nav_bar_alerts">Alerts</string>
    <string name="nav_bar_server">Server</string>
    <string name="nav_drawer_security">Security</string>
    <string name="nav_bar_settings">Settings</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="error_password_short">Password is too short</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_incorrect_password">Invalid password</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_missing_details">Missing required information</string>

    <string name="action_begin">Begin</string>
    <string name="action_delete">Delete</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_alpha_asc">A to Z</string>
    <string name="action_sort_alpha_desc">Z to A</string>
    <string name="action_sort_chron_asc">Oldest First</string>
    <string name="action_sort_chron_desc">Newest First</string>
    <string name="action_undo">Undo</string>

    <string name="login_title">Login</string>
    <string name="login_fingerprint_title">Fingerprint Login</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_touch_sensor">Touch sensor</string>
    <string name="login_use_password">Use Password</string>

    <string name="fingerprint_error">Error with fingerprint login</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_setup_cancelled">You must provide your fingerprint to enable fingerprint login.</string>
    <string name="fingerprint_verify_title">Verify Fingerprint</string>
    <string name="fingerprint_verify_cancelled">You must verify your fingerprint to change your password</string>
    <string name="fingerprint_failed">Unable to enable fingerprint authentication. Try again.</string>

    <string name="setup_title">First Time Setup</string>
    <string name="setup_title_password">Master Password</string>
    <string name="setup_title_security">Security Question</string>
    <string name="setup_title_settings">Settings</string>
    <string name="setup_confirm_password">Confirm Password</string>
    <string name="setup_fingerprint_enabled">Enable fingerprint login</string>
    <string name="setup_backup_enabled">Enable automatic backups to Google servers</string>
    <string name="setup_auth_timeout">Amount of time before app signs out due to inactivity</string>
    <string name="setup_fatal_error">Fatal error during setup. Try again.</string>

    <string name="setup_local_msg">
        Welcome to Passkeyper, it looks like this is your first time using the app.
        Please complete this brief one time setup process.
    </string>
    <string name="setup_local_password_msg">It must be at least 6 characters.</string>
    <string name="setup_local_security_msg">Make it secure, if anybody can guess it they can access your passwords!</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_security_msg">Please answer your security question</string>
    <string name="forgot_password_password_msg">Provide a new password of at least 6 characters</string>
    <string name="forgot_password_wrong_answer">Wrong answer</string>

    <string name="main_entry_deleted">entry deleted</string>
    <string name="main_entries_deleted">entries deleted</string>
    <string name="main_back_to_sign_out">Press back again to sign out</string>

    <string name="edit_entry_account">Account</string>
    <string name="edit_entry_username">Username</string>
    <string name="edit_entry_sensitive_data">Sensitive Data</string>
    <string name="edit_entry_security_questions">Security Questions</string>
    <string name="edit_entry_item_deleted">item deleted</string>
    <string name="edit_entry_items_deleted">items deleted</string>
    <string name="edit_entry_add_press">Press </string>
    <string name="edit_entry_add_sensitive">To add Passwords, PINs, etc…</string>
    <string name="edit_entry_add_security">To add Security Questions</string>
    <string name="edit_entry_popup_title">Confirm Delete</string>
    <string name="edit_entry_popup_msg">This will delete the entire entry and cannot be undone.</string>

    <string name="manage_login_password">Change password</string>
    <string name="manage_login_security">Change security question</string>
    <string name="manage_login_saving">Saving</string>
    <string name="manage_login_saved">Saved</string>
    <string name="manage_login_error">Error saving</string>

    <string name="time_seconds">Seconds</string>

    <string-array name="sensitive_data_name_array">
        <item>@string/password</item>
        <item>@string/pin</item>
        <item>@string/other</item>
    </string-array>

    <string name="password">Password</string>
    <string name="pin">PIN</string>
    <string name="other">Other</string>

    <string name="security_question">Security Question</string>
    <string name="security_answer">Security Answer</string>

    <string name="security_edit_answer">Answer</string>
    <string name="security_edit_question">Question</string>
    <string name="security_edit_new_hint">Security Question &amp; Answer</string>

    <string name="pref_fingerprint_title">Fingerprint</string>
    <string name="pref_fingerprint_summary">Sign in with an authorized fingerprint</string>
    <string name="pref_backup_title">Backup to Google</string>
    <string name="pref_backup_summary">Automatically send backups to Google servers</string>

</resources>
