<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password_security_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/security_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/security_edit_answer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/next_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/action_next"
        tools:ignore="RtlHardcoded"/>

</LinearLayout>
